# hsoptions

./: .gitignore  .travis.yml  INSTALL  README.md  build  hsoptions.cabal  push_doc_to_hackage.sh
doc/examples/: Greeter.hs  RequiredFlag.hs  SimpleFlag.hs  simpleflag1.conf
examples/: ComplexFlag.hs  DependentDefaultsDemo.hs  Greeter.hs  README.md  RequiredFlag.hs  SimpleFlag.hs
src/System/Console/: HsOptions.hs
src/System/Console/HsOptions/: ConfParser.hs  Core.hs  Parser.hs  ParserCore.hs  Types.hs
tests/unit/: MainTestSuite.hs  UnitTestHelper.hs
tests/unit/ConfFiles/: file1.conf  file2.conf  file3.conf  fileWithComments.conf  simple1.conf  user_name.conf
tests/unit/System/Console/: HsOptionsTest.hs  HsOptionsTestHelpers.hs
tests/unit/System/Console/HsOptions/: ConfParserTest.hs
util/: build  configure_project.sh
