name:                hsoptions
version:             0.1.0.0
cabal-version:       >= 1.18
synopsis:            Command line flag parser for Haskell
description:         Flags are declared in the source code and are parsed from
                     the command line. A set of validation rules can be defined
                     for each flag such as 'flag is required' or 'flag is 
                     required if this other flag is true'.
                     .
                     Flags can also be parsed from a text file stream by making
                     use of the special flag '--usingFile filename'. This 
                     flag can be specified multiple times.
                     .
                     Click on the HsOptions module for examples and documentation.
                     .

homepage:            https://github.com/josercruz01/hsoptions
license:             Apache-2.0
license-file:        LICENSE
author:              Jose Raymundo Cruz
maintainer:          jose.r.cruz01@gmail.com
copyright:           (c) Jose Raymundo Cruz (jose.r.cruz01@gmail.com)
category:            System
build-type:          Simple
cabal-version:       >=1.8
source-repository    head
           type:     git
           location: https://github.com/josercruz01/hsoptions

library
  exposed-modules:
    System.Console.HsOptions
    System.Console.HsOptions.Parser
  -- other-modules:
  build-depends:     base == 4.6.*,
                     containers == 0.5.*,
                     parsec == 3.1.*,
                     regex-posix == 0.95.*,
                     regex-compat == 0.95.*,
                     directory == 1.2.*
  hs-source-dirs:    src
  ghc-options:       -Wall

test-suite unit-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests/unit, src
  main-is:           MainTestSuite.hs
  ghc-options:       -Wall
  other-modules:     UnitTestHelper, 
                     System.Console.HsOptionsTestHelpers
  build-depends:     base == 4.6.*,
                     hsoptions,
                     containers == 0.5.*,
                     parsec == 3.1.*,
                     directory == 1.2.*,
                     regex-posix == 0.95.*,
                     regex-compat == 0.95.*,
                     HUnit >=1.2 && <2,
                     QuickCheck >=2.4 && <=2.7,
                     test-framework == 0.8.*,
                     test-framework-hunit == 0.3.*,
                     test-framework-quickcheck2 == 0.3.*

-- Example programs
executable SimpleFlag
  main-is:           SimpleFlag.hs
  hs-source-dirs:    examples
  build-depends:     base == 4.6.*,
                     hsoptions

executable ComplexFlag
  main-is:           ComplexFlag.hs
  hs-source-dirs:    examples
  ghc-options:       -Wall
  build-depends:     base == 4.6.*,
                     hsoptions
